# lsockengine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cmake_generate.bat
assets/models/blend/: car.blend  test_cube.blend
assets/nodes/: builtin.cube.node
assets/scenes/: test_scene.node
assets/shaders/: builtin.object_shader.frag  builtin.object_shader.frag.glsl  builtin.object_shader.scfg  builtin.object_shader.vert  builtin.object_shader.vert.glsl  builtin.ui_shader.scfg  builtin.ui_shader.vert  compile.bat  compile.sh
engine/: CMakeLists.txt
engine/include/: definitions.h  definitions.hpp  entry.h  entry.hpp  game_type.h  game_type.hpp
engine/include/container/: darray.h  vector2.h  vector2.hpp
engine/include/core/: application.h  application.hpp  clock.h  clock.hpp  engine.hpp  event.h  event.hpp  input.h  input.hpp  logger.h  logger.hpp  node.h  string_id.hpp
engine/include/loader/: node_loader.h  obj_format_loader.h  obj_format_loader.hpp  obj_loader.h  obj_loader.hpp  shader_config_loader.h  shader_config_loader.hpp
engine/include/math/: arithmetic.hpp  crc.hpp  mat4x4.h  mat4x4.hpp  math.h  math.hpp  quat.h  transform.h  transform.hpp  vector2.h  vector2.hpp  vector3.h  vector3.hpp  vector4.h  vector4.hpp  vertex.h  vertex.hpp
engine/include/node/: mesh_renderer3d.hpp  node.hpp  node3d.hpp  node_tree.hpp  view_port.hpp  visual_node3d.hpp
engine/include/platform/: filesystem.h  platform.h  platform.hpp
engine/include/renderer/: command_buffer.h  command_buffer.hpp  device.h  device.hpp  fence.h  fence.hpp  framebuffer.h  framebuffer.hpp  pipeline.h  pipeline.hpp  render_pass.h  render_pass.hpp  renderer.h  renderer.hpp  shader.h  shader_stage.h  swapchain.h  swapchain.hpp  vulkan_backend.h  vulkan_backend.hpp  vulkan_buffer.h  vulkan_buffer.hpp  vulkan_image.h  vulkan_image.hpp  vulkan_platform.h  vulkan_platform.hpp
engine/include/renderer/resource/: mesh.h  mesh.hpp  model.h  model.hpp  shader.hpp  shader_stage.hpp  texture.h  texture.hpp
engine/include/renderer/shader/: object_shader.h
engine/include/renderer/system/: shader_system.h  shader_system.hpp  texture_system.h  texture_system.hpp
engine/include/util/: math_utils.h  string_utils.h  string_utils.hpp
engine/src/container/: darray.c  vector2.c  vector2.cpp
engine/src/core/: application.c  application.cpp  clock.c  clock.cpp  engine.cpp  event.c  event.cpp  input.c  input.cpp  logger.c  logger.cpp
engine/src/loader/: node_loader.c  obj_format_loader.c  obj_format_loader.cpp  obj_loader.c  obj_loader.cpp  shader_config_loader.c  shader_config_loader.cpp
engine/src/math/: mat4x4.cpp  math.c  math.cpp  transform.c  transform.cpp  vector2.c
engine/src/node/: mesh_renderer3d.cpp  node.cpp  node3d.cpp  node_tree.cpp  view_port.cpp  visual_node3d.cpp
engine/src/platform/: filesystem.c  platform_linux.c  platform_linux.cpp  platform_win32.c  platform_win32.cpp
engine/src/renderer/: command_buffer.c  command_buffer.cpp  device.c  device.cpp  fence.c  fence.cpp  framebuffer.c  framebuffer.cpp  pipeline.c  pipeline.cpp  render_pass.c  render_pass.cpp  renderer.c  renderer.cpp  shader.c  shader_stage.c  swapchain.c  swapchain.cpp  vulkan_backend.c  vulkan_backend.cpp  vulkan_buffer.c  vulkan_buffer.cpp  vulkan_image.c  vulkan_image.cpp
engine/src/renderer/resource/: mesh.c  mesh.cpp  model.c  model.cpp  shader.cpp  shader_stage.cpp  texture.c  texture.cpp
engine/src/renderer/shader/: object_shader.c
engine/src/renderer/system/: shader_system.c  shader_system.cpp  texture_system.c  texture_system.cpp
engine/src/util/: math_utils.c  string_utils.c  string_utils.cpp
test/: CMakeLists.txt  game.c  game.cpp  game.h  game.hpp  main.c  main.cpp  test.c
